[package]
name = "swordsandrunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
serde = { version = "1.0.171", features = ["derive"] }
toml = "0.7.6"

[dependencies.bevy]
version = "0.11"
# Disable the default features if there are any that you do not want
default-features = false
features = [ 
  # Bevy functionality:
  "bevy_asset",         # Assets management
  "bevy_winit",         # Window management
  "x11",                # Linux: Support X11 windowing system
  "wayland",            # Linux: Support Wayland windowing system

  # Rendering
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering

  # File formats:
  "png",

  # serde
  "serialize",
]

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
